# bibclean

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  bib_cleaner.py  pyproject.toml
bibclean/: __init__.py  __main__.py  cli.py
bibkit/: __init__.py  __main__.py  cli.py
tests/: paper.tex  refs.bib  test_bib_cleaner.py
tests/fixtures/crossref/: paper.tex  refs.bib
tests/fixtures/edge_all_cited/: paper.tex  refs.bib
tests/fixtures/edge_none_cited/: paper.tex  refs.bib
tests/fixtures/multi_input/: intro.tex  main.tex  method.tex  refs.bib
tests/fixtures/multi_version/: paper_v1.tex  paper_v2.tex  refs_v1.bib  refs_v2.bib
tests/fixtures/no_documentclass/: appendix.tex  notes.tex  refs.bib
tests/fixtures/nocite_star/: paper.tex  refs.bib
tests/fixtures/simple/: paper.tex  refs.bib
tests/fixtures/special_chars/: paper.tex  refs.bib
