[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bibclean"
version = "1.0.0"
description = "A CLI tool to remove unused entries from BibTeX files based on actual \\cite usage in LaTeX projects."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "bibtex", "latex", "bibliography", "cite", "cleaner",
    "cli", "research", "academic", "paper", "reference-management",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]

[[project.authors]]
name = "ZBigFish"

[project.urls]
Homepage = "https://github.com/ZBigFish/bibclean"
Repository = "https://github.com/ZBigFish/bibclean"
Issues = "https://github.com/ZBigFish/bibclean/issues"

[project.scripts]
bibclean = "bibclean.cli:main"
